DigiHub/force-app/main/default/objects/Product2/fields/PS__c.field-meta.xml
<CustomField>
    <fullName>PS__c</fullName>
    <label>PS</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>