DigiHub/force-app/main/default/objects/Product2/fields/Service_Anual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Service_Anual_Percentage__c</fullName>
    <label>Service Anual Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>