DigiHub/force-app/main/default/objects/Product2/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <label>Tonnage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>