DigiHub/force-app/main/default/objects/Product2/recordTypes/Truck.recordType-meta.xml
<RecordType>
    <fullName>Truck</fullName>
    <active>true</active>
    <label>Truck</label>
</RecordType>